--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 	
-	<link rel="stylesheet" href="../stylesheets/style.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
     
-	<link rel="import" href="../polymer_elements/polymer.html">
+	<link rel="import" href="polymer_elements/polymer.html">
   </head>
 
   <body>
-    <paper-button raised>flat button</paper-button>
+    <paper-button>Paper Button</paper-button>
   </body>
 </html>
